syntax = "proto3";

import "google/api/annotations.proto";

package gateway;

service AliveService {
  rpc GetStatus(Empty) returns (AliveResponse) {
    option (google.api.http) = {
      get: "/alive"
    };
  }
}

message Empty {}

message AliveResponse {
  bool status = 1;
}
