syntax = "proto3";

import "google/api/annotations.proto";
import "alive.proto";

package gateway;

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/user/{id}"
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (Empty) {
    option (google.api.http) = {
      put: "/user/{id}"
      body: "*"
    };
  }
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

message UserResponse {
  string name =  1;
  int32 age =  2;
}

